--- a/src/main/resources/templates/fragments/sideBar.html
+++ b/src/main/resources/templates/fragments/sideBar.html
@@ -1,9 +1,13 @@
 <div id="sidebar-container" class="bg-main" th:fragment="sideBar">
     <div class="logo ">
         <div class="profile">
-            <img src="https://1.bp.blogspot.com/-vhmWFWO2r8U/YLjr2A57toI/AAAAAAAACO4/0GBonlEZPmAiQW4uvkCTm5LvlJVd_-l_wCNcBGAsYHQ/s16000/team-1-2.jpg"
-                alt="profile_picture">
-            <p>Nombre administrador</p>
+            <img
+                 th:if="${userLog.profilePicture != null}" th:src="@{/docs/{i} (i = ${userLog.profilePicture})}"
+                 alt="...">
+            <img
+                 th:if="${userLog.profilePicture == null}" th:src="@{'https://definicion.de/wp-content/uploads/2019/07/perfil-de-usuario.png'}"
+                 alt="...">
+            <p th:text="${userLog.name} + ' ' + ${userLog.lastname} + ' ' + ${userLog.surname}"></p>
         </div>
     </div>
     <div class="menu">
