--- a/src/main/resources/templates/users/editPassword.html
+++ b/src/main/resources/templates/users/editPassword.html
@@ -13,6 +13,14 @@
           integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.css" rel="stylesheet" />
+    <style>
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
+        }
+    </style>
 </head>
 
 <body>
@@ -33,13 +41,13 @@
                             <div class="col">
                                 <div class="row">
                                     <div class="col-6 mt-3 mb-3">
-                                        <label class="form-label">Nueva contraseña</label>
+                                        <label class="form-label">Nueva contraseña <span class="text-danger">*</span></label>
                                         <input id="pass1" class="form-control" type="password" minlength="5" maxlength="255"
                                                placeholder="*****" th:field="*{password}" onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
                                     </div>
                                     <div class="col-6 mt-3 mb-3">
-                                        <label class="form-label">Confirmar contraseña</label>
+                                        <label class="form-label">Confirmar contraseña <span class="text-danger">*</span></label>
                                         <input id="confirmarContraseña" name="confirmarContraseña" class="form-control" type="password" minlength="5" maxlength="255"
                                                placeholder="*****"  onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
@@ -49,7 +57,7 @@
                             <div class="card-footer">
                                 <div class="row float-right">
                                     <div class="col float-right">
-                                        <a th:href="@{/users/list}" class="btn btn-secondary">
+                                        <a th:href="@{/users/list/enlaces}" class="btn btn-secondary">
                                             <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
                                                 class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
                                         </a>
