--- a/src/main/resources/templates/administrador/create.html
+++ b/src/main/resources/templates/administrador/create.html
@@ -13,6 +13,14 @@
           integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.css" rel="stylesheet" />
+    <style>
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
+        }
+    </style>
 </head>
 
 <body>
@@ -36,13 +44,13 @@
                             <div class="col">
                                 <div class="row">
                                     <div class="col-4">
-                                        <label class="form-label">Nombre(s)</label>
+                                        <label class="form-label">Nombre(s) <span class="text-danger">*</span></label>
                                         <input id="name" class="form-control" type="text" minlength="2" maxlength="150"
                                                placeholder="Nombre(s)" th:field="*{name}" onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
                                     </div>
                                     <div class="col-4">
-                                        <label class="form-label">Primer Apellido</label>
+                                        <label class="form-label">Primer Apellido <span class="text-danger">*</span></label>
                                         <input id="lastname" class="form-control" type="text" minlength="2" maxlength="150"
                                                placeholder="Primer Apellido" th:field="*{lastname}" onchange="checkInputs()"
                                                required>
@@ -55,7 +63,7 @@
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></small>
                                     </div>
                                     <div class="col-8 mt-3">
-                                        <label class="form-label">Correo electrónico</label>
+                                        <label class="form-label">Correo electrónico <span class="text-danger">*</span></label>
                                         <input id="email" class="form-control" type="email"
                                                placeholder="Correo@Electronico.com" th:field="*{email}" onchange="checkInputs()"
                                                required>
@@ -67,26 +75,26 @@
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('profilePicture')}" th:errors="*{profilePicture}"></small>
                                     </div>
                                     <div class="col-6 mt-3">
-                                        <label class="form-label">Nombre de Usuario</label>
-                                        <input id="username" class="form-control" type="text" minlength="2" maxlength="150"
+                                        <label class="form-label">Nombre de Usuario <span class="text-danger">*</span></label>
+                                        <input id="username" class="form-control" type="email" minlength="2" maxlength="150"
                                                placeholder="Nombre de Usuario" th:field="*{username}" onchange="checkInputs()"
                                                required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></small>
                                     </div>
                                     <div class="col-6 mt-3">
-                                        <label class="form-label">Teléfono</label>
+                                        <label class="form-label">Teléfono <span class="text-danger">*</span></label>
                                         <input id="phone" class="form-control" type="text" minlength="10" maxlength="10"
                                                placeholder="Teléfono" th:field="*{phone}" onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
                                     </div>
                                     <div class="col-6 mt-3 mb-3">
-                                        <label class="form-label">Contraseña</label>
+                                        <label class="form-label">Contraseña <span class="text-danger">*</span></label>
                                         <input id="pass1" class="form-control" type="password" minlength="5" maxlength="255"
                                                placeholder="*****" th:field="*{password}" onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
                                     </div>
                                     <div class="col-6 mt-3 mb-3">
-                                        <label class="form-label">Confirmar Contraseña</label>
+                                        <label class="form-label">Confirmar Contraseña <span class="text-danger">*</span></label>
                                         <input id="confirmarContraseña" name="confirmarContraseña" class="form-control" type="password" minlength="5" maxlength="255"
                                                placeholder="*****"  onchange="checkInputs()" required>
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
@@ -96,7 +104,7 @@
                             <div class="card-footer">
                                 <div class="row float-right">
                                     <div class="col float-right">
-                                        <a th:href="@{/users/list}" class="btn btn-secondary">
+                                        <a th:href="@{/users/list/administradores}" class="btn btn-secondary">
                                             <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
                                                 class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
                                         </a>
