--- a/src/main/resources/templates/administrador/dashboard.html
+++ b/src/main/resources/templates/administrador/dashboard.html
@@ -107,7 +107,7 @@
             <div class="card mb-3 bg-card shadow border-0" style="border-radius: 0%;">
               <div class="card-header border-0 d-flex align-items-center">
                 <h2>Tema</h2>
-                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+                <h3 class="ms-auto "><a style="color: black" th:href="@{/tema/}"><i class="fa-solid fa-arrow-right pointer"></i></a></h3>
               </div>
               <div class="card-body mt-2 ">
                 <div class="d-flex justify-content-around p-5" style="padding: 5px;">
