--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
           integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
+        }
+    </style>
 </head>
 
 <body>
@@ -26,16 +34,16 @@
         <div id="content">
             <div class="container">
                 <div class="card">
-                    <div class="card-header">REGISTRAR</div>
+                    <div class="card-header">EDITAR</div>
                     <div class="card-body">
                         <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-                            <h5 class="card-title">NUEVO SERVICIO PÚBLICO</h5>
+                            <h5 class="card-title">EDITAR CATEGORÍA</h5>
                         </div>
                         <form th:action="@{/category/update/{id} (id=${category.id})}" method="POST" th:object="${category}">
                             <div class="col">
                                 <div class="row">
                                     <div class="col">
-                                        <label class="form-label">Nombre</label>
+                                        <label class="form-label">Nombre <span class="text-danger">*</span></label>
                                         <input type="text" minlength="2" class="form-control" maxlength="150" placeholder="Nombre" th:field="*{name}" required>
                                     </div>
                                 </div>
