--- a/src/main/resources/templates/enlace/enlaces.html
+++ b/src/main/resources/templates/enlace/enlaces.html
@@ -14,6 +14,15 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.css" rel="stylesheet" />
 
+  <style>
+    :root {
+      --main: [[${color.colorMain}]];
+      --secondary: [[${color.colorSecundary}]];
+      --textMain: [[${color.colorText}]];
+      --textSecondary: [[${color.colorTitle}]];
+    }
+  </style>
+
 </head>
 
 <body>
