--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -2,7 +2,7 @@
     <nav class=" w-100 navbar navbar-dark secondaryColor sticky-top" th:fragment="navBar">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Coat_of_arms_of_Morelos.svg/1200px-Coat_of_arms_of_Morelos.svg.png"
+                <img th:src="@{/docs/{i} (i = ${image.logo1})}"
                      alt="" width="35" class="d-inline-block align-text-top">
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -11,7 +11,7 @@
                 </li>
             </ul>
             <a class="d-flex navbar-brand" href="#">
-                <img src="https://images.squarespace-cdn.com/content/v1/5609c343e4b0cbf6eb5548e4/1598900429639-P7LC22GUB3O2593JWQAC/MORELOS_Mesa+de+trabajo+1.png"
+                <img th:src="@{/docs/{i} (i = ${image.logo2})}"
                      alt="" width="55" class="d-inline-block align-text-top">
             </a>
         </div>
