--- a/src/main/resources/templates/enlace/dashboard.html
+++ b/src/main/resources/templates/enlace/dashboard.html
@@ -12,6 +12,14 @@
           integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
+  <style>
+    :root {
+      --main: [[${color.colorMain}]];
+      --secondary: [[${color.colorSecundary}]];
+      --textMain: [[${color.colorText}]];
+      --textSecondary: [[${color.colorTitle}]];
+    }
+  </style>
   <body>
   <div class="d-flex">
     <div th:insert="~{fragments/sideBar :: sideBar}"></div>
@@ -32,6 +40,7 @@
       </div>
       </div>
     </div>
+
 
     <script th:src="@{/js/toast.min.js}"></script>
 
