--- a/src/main/resources/templates/requests/listRequests.html
+++ b/src/main/resources/templates/requests/listRequests.html
@@ -6,143 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solictudes</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
+        }
         li {
             text-decoration: none;
         }
     </style>
 </head>
 
-<body>
-<div th:insert="~{fragments/header :: header}"></div>
+<body >
+<div class="d-flex" >
+    <div th:replace="~{fragments/sideBar :: sideBar}"></div>
 
-<div class="container">
-    <div class="card">
-        <div class="card-header">LISTADO DE SOLICITUDES</div>
-        <div class="card-body">
-            <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-                <h5 class="card-title">Solicitudes</h5>
+    <div  id="content" class="w-100"   >
+        <div th:insert="~{fragments/navBar :: navBar}"></div>
+        <div  class="container " style="min-height: 100vh;" data-bs-spy="scroll"  data-bs-offset="0">
+            <div class="row"   style="background-color: #D9D9D9; box-shadow: 15px 15px 30px #bebebe,
+             -15px -15px 30px #ffffff; border-radius: 30px; border: black 0px solid;  margin: 19px; padding: 10px"  th:each="tmpRequest : ${listRequests}">
+                <div class="col-12" >
+                    <div class="" style="  float: right;">
+                        <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
+                           class="btn mb-3" ><i style="" class="fa-solid fa-arrow-right fa-fade fa-2x"></i></a>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-6">
+                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                 class="imgIncidence" alt="...">
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                 class="imgIncidence" alt="...">
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                 class="imgIncidence" alt="...">
+                        </div>
+                        <div class="col-md-3 col-6">
+                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                 class="imgIncidence" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 mt-4">
+                    <div class="row">
+                        <div class="col-6" style="padding: 5px">
 
-            </div>
-            <div class="row">
-                <div class="col-lg-12 mx-auto table-responsive">
-                    <table class="table table-hover table-collapse mt-3 mytable" id="states">
-                        <thead>
-                        <th scope="col">Categoria</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">President</th>
-                        <th scope="col">Comite</th>
-                        <th scope="col">Fecha</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Estado del pago</th>
-                        <th scope="col">Cantidad de Pago</th>
-                        <th scope="col">Acciones</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="tmpRequest : ${listRequests}">
-                            <td th:text="${tmpRequest.category.name}"></td>
-                            <td>
-                                <p
-                                        th:utext="${tmpRequest.description}" class="text-truncate">
-                                </p>
-                            </td>
-                            <td th:text="${tmpRequest.president.user.name}"></td>
-                            <td th:text="${tmpRequest.president.committee.name}"></td>
-                            <td th:text="${tmpRequest.startDate}"></td>
-                            <td th:switch="${tmpRequest.status}">
-                                <div th:case="'1'">
-                                    <small class="text-muted"><span
-                                            class="badge badge-pill badge-danger">Cancelada</span></small>
+                            <div class="d-flex align-items-center">
+                                <div class="flex-shrink-0">
+                                    <img class="imgRedonda"
+                                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                                         alt="...">
                                 </div>
-                                <div th:case="'2'">
-                                    <small class="text-muted"><span
-                                            class="badge badge-pill badge-success">Canalizada</span></small>
+                                <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                                    <h5 th:text="${tmpRequest.president.user.name}" class="mt-3"></h5>
+                                    <p th:text="${tmpRequest.president.committee.name}" style="margin-top: -7px;"></p>
                                 </div>
-                                <div th:case="'3'">
-                                    <small class="text-muted"><span
-                                            class="badge badge-pill badge-primary">Atendida</span></small>
-                                </div>
-                            </td>
-                            <td th:switch="${tmpRequest.paymentStatus}">
-                                <div th:case="'1'">
-                                    <small class="text-muted"><span class="badge badge-pill badge-danger">Por
-                                                    cobrar</span></small>
-                                </div>
-                                <div th:case="'2'">
-                                    <small class="text-muted"><span class="badge badge-pill badge-primary">Pago
-                                                    realizado</span></small>
-                                </div>
-                            </td>
-                            <td th:text="${tmpRequest.paymentAmount}"></td>
-                            <td>
-                                <div class="text-end">
-                                    <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
-                                       class="btn btn-warning mb-3" data-bs-toggle="modal"
-                                       data-bs-target="#detailsPayment">
-                                        <ion-icon name="book"></ion-icon>&nbsp;<span
-                                            class="d-sm-none d-md-none d-lg-inline d-xl-inline"> Detalles</span>
-                                    </a>
-                                </div>
-                                <div class="text-end">
-                                    <div th:switch="${tmpRequest.paymentAmount}">
-                                        <div th:case="null">
-                                            <a th:href="@{/request/amount/{id} (id=${tmpRequest.id})}"
-                                               class="btn btn-primary mb-3" data-bs-toggle="modal"
-                                               data-bs-target="#detailsPayment">
-                                                <ion-icon name="pencil"></ion-icon>&nbsp;<span
-                                                    class="d-sm-none d-md-none d-lg-inline d-xl-inline">Asignar
-                                                            monto</span>
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                    <a th:href="@{/request/commentary/{id} (id=${tmpRequest.id})}"
-                                       class="btn btn-info mb-3">
-                                        <ion-icon name="chatbubbles"></ion-icon>&nbsp;<span
-                                            class="d-sm-none d-md-none d-lg-inline d-xl-inline">
-                                                    Comentarios</span>
-                                    </a>
-                                </div>
-
-                            </td>
-
-                        </tr>
-                        </tbody>
-                    </table>
-                    <nav th:if="${listRequests.totalPages > 0}" aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                            <li class="page-item" th:classappend="${listRequests.number == 0 ? 'disabled' : ''}">
-                                <a th:href="@{/request/list(page=${listRequests.number - 1})}"
-                                   class="page-link">Anterior</a>
-                            </li>
-
-                            <li class="page-item" th:classappend="${i eq listRequests.number + 1} ? 'active'"
-                                th:each="i : ${#numbers.sequence( 1, listRequests.totalPages, 1)}">
-                                <a class="page-link" th:href="@{/request/list?page={tmpPag} (tmpPag=${i-1}) }"
-                                   th:text="${i}" th:title="${'Page '+ i}" data-toggle="tooltip"></a>
-                            </li>
-                            <li class="page-item"
-                                th:classappend="${listRequests.number == (listRequests.totalPages - 1) ? 'disabled' : ''}">
-                                <a th:href="@{/request/list(page=${listRequests.number + 1})}"
-                                   class="page-link">Siguiente</a>
-                            </li>
-                        </ul>
-                    </nav>
+                            </div>
+                            <span>Fecha y hora: <span th:text="${tmpRequest.startDate}"> </span></span>
+                            <br>
+                            <span>Estatus:</span>
+                            <span class="badge bg-success" th:if="${tmpRequest.status == 1}">Activo</span>
+                            <span class="badge bg-danger" th:if="${tmpRequest.status == 2}">Rechazado</span>
+                        </div>
+                        <div class="col-6">
+                            <p class="text-break" th:utext="${tmpRequest.description}">
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </div>
-        <div class="card-footer"></div>
     </div>
 </div>
+
 <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
 <!--Ionicons-->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script th:href="@{/js/bootstrap.min.js}"></script>
 
 <script th:src="@{/js/toast.min.js}"></script>
 
