--- a/src/main/resources/templates/requests/listRequests.html
+++ b/src/main/resources/templates/requests/listRequests.html
@@ -28,67 +28,69 @@
 <body >
 <div class="d-flex" >
     <div th:replace="~{fragments/sideBar :: sideBar}"></div>
-
-    <div  id="content" class="w-100"   >
+    <div class="w-100">
         <div th:insert="~{fragments/navBar :: navBar}"></div>
-        <div  class="container " style="min-height: 100vh;" data-bs-spy="scroll"  data-bs-offset="0">
-            <div class="row"   style="background-color: #D9D9D9; box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff; border-radius: 30px; border: black 0px solid;  margin: 19px; padding: 10px"  th:each="tmpRequest : ${listRequests}">
-                <div class="col-12" >
-                    <div class="" style="  float: right;">
-                        <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
-                           class="btn mb-3" ><i style="" class="fa-solid fa-arrow-right fa-fade fa-2x"></i></a>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3 col-6">
-                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
-                                 class="imgIncidence" alt="...">
+        <div  id="content"  style="margin-top: 20px;!important;"  >
+            <div  class="container " style="min-height: 100vh; margin-top: 20px; " data-bs-spy="scroll"  data-bs-offset="0">
+                <div class="row"   style="background-color: #D9D9D9; box-shadow: 15px 15px 30px #bebebe,
+             -15px -15px 30px #ffffff; margin-top: 20px; border-radius: 30px; border: black 0px solid;  margin: 19px; padding: 10px"  th:each="tmpRequest : ${listRequests}">
+                    <div class="col-12" >
+                        <div class="" style="  float: right;">
+                            <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
+                               class="btn mb-3" ><i style="" class="fa-solid fa-arrow-right fa-fade fa-2x"></i></a>
                         </div>
-                        <div class="col-md-3 col-6">
-                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
-                                 class="imgIncidence" alt="...">
-                        </div>
-                        <div class="col-md-3 col-6">
-                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
-                                 class="imgIncidence" alt="...">
-                        </div>
-                        <div class="col-md-3 col-6">
-                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
-                                 class="imgIncidence" alt="...">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 mt-4">
-                    <div class="row">
-                        <div class="col-6" style="padding: 5px">
-
-                            <div class="d-flex align-items-center">
-                                <div class="flex-shrink-0">
-                                    <img class="imgRedonda"
-                                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
-                                         alt="...">
-                                </div>
-                                <div class="flex-grow-1 ms-3" style="font-size: 22px;">
-                                    <h5 th:text="${tmpRequest.president.user.name}" class="mt-3"></h5>
-                                    <p th:text="${tmpRequest.president.committee.name}" style="margin-top: -7px;"></p>
-                                </div>
+                        <div class="row">
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
                             </div>
-                            <span>Fecha y hora: <span th:text="${tmpRequest.startDate}"> </span></span>
-                            <br>
-                            <span>Estatus:</span>
-                            <span class="badge bg-success" th:if="${tmpRequest.status == 1}">Activo</span>
-                            <span class="badge bg-danger" th:if="${tmpRequest.status == 2}">Rechazado</span>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <p class="text-break" th:utext="${tmpRequest.description}">
-                            </p>
+                    </div>
+                    <div class="col-12 mt-4">
+                        <div class="row">
+                            <div class="col-6" style="padding: 5px">
+
+                                <div class="d-flex align-items-center">
+                                    <div class="flex-shrink-0">
+                                        <img class="imgRedonda"
+                                             src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                                             alt="...">
+                                    </div>
+                                    <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                                        <h5 th:text="${tmpRequest.president.user.name}" class="mt-3"></h5>
+                                        <p th:text="${tmpRequest.president.committee.name}" style="margin-top: -7px;"></p>
+                                    </div>
+                                </div>
+                                <span>Fecha y hora: <span th:text="${tmpRequest.startDate}"> </span></span>
+                                <br>
+                                <span>Estatus:</span>
+                                <span class="badge bg-success" th:if="${tmpRequest.status == 1}">Activo</span>
+                                <span class="badge bg-danger" th:if="${tmpRequest.status == 2}">Rechazado</span>
+                            </div>
+                            <div class="col-6">
+                                <p class="text-break" th:utext="${tmpRequest.description}">
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
+
 </div>
 
 <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
