--- a/src/main/resources/templates/suburb/create.html
+++ b/src/main/resources/templates/suburb/create.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrar Colonias</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
     <!-- <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
@@ -13,56 +15,69 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
     <style>
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
+        }
         li {
             text-decoration: none;
+        }
+        #btnReg{
+            background-color: var(--main);
+            color: var(--textSecondary);
         }
     </style>
 </head>
 
 <body>
-    <div th:insert="~{fragments/header :: header}"></div>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">REGISTRAR</div>
-            <div class="card-body">
-                <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-                    <h5 class="card-title">NUEVA COLONIA</h5>
-                </div>
-                <form th:action="@{/suburb/save}" method="POST" th:object="${suburb}">
-                    <div class="col">
-                        <div class="row mt-3 mb-3">
-                            <div class="col-6">
-                                <label class="form-label">Nombre</label>
-                                <input id="name" class="form-control" type="text" minlength="2" maxlength="150"
-                                    placeholder="Nombre" th:field="*{name}" required>
-                            </div>
-                            <div class="col-6">
-                                <label class="form-label">Código Postal</label>
-                                <input id="name" class="form-control" type="text" minlength="5" maxlength="5"
-                                    placeholder="Código Postal" th:field="*{postalCode}" required>
+    <div class="d-flex">
+    <div th:insert="~{fragments/sideBar :: sideBar}"></div>
+    <div class="w-100">
+        <div th:insert="~{fragments/navBar :: navBar}"></div>
+        <div class="container" style="margin-top: 20px">
+
+                    <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
+                        <h5 class="card-title">NUEVA COLONIA</h5>
+                    </div>
+                    <form th:action="@{/suburb/save}" method="POST" th:object="${suburb}">
+                        <div class="col">
+                            <div class="row mt-3 mb-3">
+                                <div class="col-6">
+                                    <label class="form-label">Nombre</label>
+                                    <input id="name" class="form-control" type="text" minlength="2" maxlength="150"
+                                           placeholder="Nombre" th:field="*{name}" required>
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">Código Postal</label>
+                                    <input id="name2" class="form-control" type="text" minlength="5" maxlength="5"
+                                           placeholder="Código Postal" th:field="*{postalCode}" required>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row float-right">
-                            <div class="col float-right">
-                                <a th:href="@{/suburb/list}" class="btn btn-secondary">
-                                    <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
-                                        class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
-                                </a>
-                                <button id="btnReg" class="btn btn-primary" type="submit">
-                                    <ion-icon name="checkmark"></ion-icon>&nbsp;<span
-                                        class="d-sm-none d-md-none d-lg-inline d-xl-iniline">
+
+                            <div class="row float-right">
+                                <div class="col float-right">
+                                    <a th:href="@{/suburb/list}" class="btn btn-secondary">
+                                        <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
+                                            class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
+                                    </a>
+                                    <button id="btnReg" class="btn btn-primary" type="submit">
+                                        <ion-icon name="checkmark"></ion-icon>&nbsp;<span
+                                            class="d-sm-none d-md-none d-lg-inline d-xl-iniline">
                                         Guardar
                                     </span>
-                                </button>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
+                    </form>
         </div>
     </div>
+    </div>
+
+
+
     <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
     <!--Ionicons-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
