--- a/src/main/resources/templates/suburb/list.html
+++ b/src/main/resources/templates/suburb/list.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Colonias</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
   <!-- <link rel="stylesheet" th:href="@{/css/datatables.min.css}" /> -->
   <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
@@ -14,76 +16,91 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
   <style>
+    :root {
+      --main: [[${color.colorMain}]];
+      --secondary: [[${color.colorSecundary}]];
+      --textMain: [[${color.colorText}]];
+      --textSecondary: [[${color.colorTitle}]];
+    }
     li {
       text-decoration: none;
     }
+    .registrar{
+      background-color: var(--main);
+      color: var(--textSecondary);
+    }
+    #number{
+      background-color: var(--main);
+      border:  var(--main);
+    }
+
   </style>
 </head>
 
 <body>
-  <div th:insert="~{fragments/header :: header}"></div>
-  <div class="container">
-    <div class="card">
-      <div class="card-header">LISTADO DE COLONIAS</div>
-      <div class="card-body">
-        <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-          <h5 class="card-title">Colonias</h5>
-          <div class="text-end">
-            <a th:href="@{/suburb/create}" class="btn btn-primary mb-3">
-              <ion-icon name="pencil"></ion-icon>&nbsp;<span class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVA
+<div class="d-flex">
+<div th:insert="~{fragments/sideBar :: sideBar}"></div>
+<div class="w-100">
+  <div th:insert="~{fragments/navBar :: navBar}"></div>
+  <div class="container" style="margin-top: 20px">
+    <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
+      <h5 class="card-title">Colonias</h5>
+      <div class="text-end">
+        <a th:href="@{/suburb/create}" class="btn mb-3 registrar">
+          <ion-icon name="pencil"></ion-icon>&nbsp;<span class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVA
                 COLONIA</span>
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 mx-auto table-responsive">
-            <table class="table table-hover table-collapse mt-3 mytable" id="states">
-              <thead>
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Municipio</th>
-                <th scope="col">Código Postal</th>
-                <th scope="col">Acciones</th>
-              </thead>
-              <tbody>
-                <tr th:each="tmpSuburb, iter : ${listSuburbs}">
-                  <td th:text="${iter.index + 1}"></td>
-                  <td th:text="${tmpSuburb.name}"></td>
-                  <td th:text="${tmpSuburb.city.name}"></td>
-                  <td th:text="${tmpSuburb.postalCode}"></td>
-                  <td>
-                    <div class="text-end">
-                      <a th:href="@{/suburb/edit/{id} (id=${tmpSuburb.id})}" class="btn btn-primary mb-3">
-                        <ion-icon name="create-outline"></ion-icon>
-                      </a>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <nav th:if="${listSuburbs.totalPages > 0}" aria-label="Page navigation example">
-              <ul class="pagination justify-content-center">
-                <li class="page-item" th:classappend="${listSuburbs.number == 0 ? 'disabled' : ''}">
-                  <a th:href="@{/suburb/list(page=${listSuburbs.number - 1})}" class="page-link">Anterior</a>
-                </li>
-
-                <li class="page-item" th:classappend="${i eq listSuburbs.number + 1} ? 'active'"
-                  th:each="i : ${#numbers.sequence( 1, listSuburbs.totalPages, 1)}">
-                  <a class="page-link" th:href="@{/suburb/list?page={tmpPag} (tmpPag=${i-1}) }" th:text="${i}"
-                    th:title="${'Page '+ i}" data-toggle="tooltip"></a>
-                </li>
-                <li class="page-item"
-                  th:classappend="${listSuburbs.number == (listSuburbs.totalPages - 1) ? 'disabled' : ''}">
-                  <a th:href="@{/suburb/list(page=${listSuburbs.number + 1})}" class="page-link">Siguiente</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div>
+        </a>
       </div>
-      <div class="card-footer"></div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 mx-auto table-responsive">
+        <table class="table table-hover table-collapse mt-3 mytable" id="states">
+          <thead>
+          <th scope="col">#</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Municipio</th>
+          <th scope="col">Código Postal</th>
+          <th scope="col">Acciones</th>
+          </thead>
+          <tbody>
+          <tr th:each="tmpSuburb, iter : ${listSuburbs}">
+            <td th:text="${iter.index + 1}"></td>
+            <td th:text="${tmpSuburb.name}"></td>
+            <td th:text="${tmpSuburb.city.name}"></td>
+            <td th:text="${tmpSuburb.postalCode}"></td>
+            <td>
+              <div class="text-end">
+                <a th:href="@{/suburb/edit/{id} (id=${tmpSuburb.id})}" class="btn bg-main btn-circle m-1 align-content-center">
+                  <ion-icon name="create-outline"></ion-icon>
+                </a>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+        <nav th:if="${listSuburbs.totalPages > 0}" aria-label="Page navigation example">
+          <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${listSuburbs.number == 0 ? 'disabled' : ''}">
+              <a th:href="@{/suburb/list(page=${listSuburbs.number - 1})}" class="page-link">Anterior</a>
+            </li>
+
+            <li class="page-item" th:classappend="${i eq listSuburbs.number + 1} ? 'active'"
+                th:each="i : ${#numbers.sequence( 1, listSuburbs.totalPages, 1)}">
+              <a class="page-link number" id="number" th:href="@{/suburb/list?page={tmpPag} (tmpPag=${i-1}) }" th:text="${i}"
+                 th:title="${'Page '+ i}" data-toggle="tooltip"></a>
+            </li>
+            <li class="page-item"
+                th:classappend="${listSuburbs.number == (listSuburbs.totalPages - 1) ? 'disabled' : ''}">
+              <a th:href="@{/suburb/list(page=${listSuburbs.number + 1})}" class="page-link">Siguiente</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     </div>
   </div>
+</div>
+
   <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
   <!--Ionicons-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
