--- a/src/main/resources/templates/city/list.html
+++ b/src/main/resources/templates/city/list.html
@@ -29,9 +29,9 @@
         <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
           <h5 class="card-title">Municipios</h5>
           <div class="text-end">
-            <a th:href="@{/city/create}" class="btn btn-primary mb-3">
-              <ion-icon name="pencil"></ion-icon>&nbsp;<span class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVO
-                MUNICIPIO</span>
+            <a th:href="@{/president/create}" class="btn btn-primary mb-3">
+              <ion-icon name="pencil"></ion-icon>&nbsp;<span
+                    class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVA SOLICITUD</span>
             </a>
           </div>
         </div>
