--- a/src/main/resources/templates/president-request/list.html
+++ b/src/main/resources/templates/president-request/list.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solictudes</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -29,158 +34,67 @@
         <div th:insert="~{fragments/navBar :: navBar}"></div>
 
 
-        <div class="container">
-            <div class="card mb-3 bg-card shadow border-0 mb-3" style="border-radius: 0%;">
-                <div class="card-body mt-2">
-                    <div class="container-fluid">
+        <div  id="content"  style="margin-top: 20px;!important;"  >
+            <div  class="container " style="min-height: 100vh; margin-top: 20px; " data-bs-spy="scroll"  data-bs-offset="0">
+                <a th:href="@{/president/create}" class="btn btn-primary mb-3">
+                    <ion-icon name="pencil"></ion-icon>&nbsp;<span
+                        class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVA SOLICITUD</span>
+                </a>
+                <div class="row"   style="background-color: #D9D9D9; box-shadow: 15px 15px 30px #bebebe,
+             -15px -15px 30px #ffffff; margin-top: 20px; border-radius: 30px; border: black 0px solid;  margin: 19px; padding: 10px"  th:each="tmpRequest : ${listRequests}">
+                    <div class="col-12" >
+                        <div class="" style="  float: right;">
+                            <a th:href="@{/request/details/{id} (id=${tmpRequest.id})}"
+                               class="btn mb-3" ><i style="" class="fa-solid fa-arrow-right fa-fade fa-2x"></i></a>
+                        </div>
                         <div class="row">
-                            <div class="col-8">
-                                <div id="carouselExampleControls" style="background-color: black;"
-                                     class="carousel slide" data-bs-ride="carousel">
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
-                                                 class="d-block imgCarousel" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="https://cnnespanol.cnn.com/wp-content/uploads/2023/03/230312010724-01-california-flooding-031123.jpg?quality=100&strip=info"
-                                                 class="d-block imgCarousel" alt="...">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="https://es.amnesty.org/fileadmin/user_upload/2022-08-31_15_02_09-Window.jpg"
-                                                 class="d-block imgCarousel" alt="...">
-                                        </div>
-                                    </div>
-                                    <button class="carousel-control-prev" type="button"
-                                            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Previous</span>
-                                    </button>
-                                    <button class="carousel-control-next" type="button"
-                                            data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Next</span>
-                                    </button>
-                                </div>
-                                <div th:each="tmpCommentary : ${listComents}">
-                                    <div th:if="${tmpCommentary.id == userLog.id}" class="d-flex align-items-center"  >
-                                        <div class="flex-shrink-0">
-                                            <img class="imgRedonda"
-                                                 src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
-                                                 alt="...">
-                                        </div>
-                                        <div class="flex-grow-1 ms-3">
-                                            <h5 class="mt-3"  th:text="${tmpCommentary.autor}">Nombre:</h5>
-                                            <p style="margin-top: -7px;" th:text="${tmpCommentary.content}">Comentario Comentario Comentario Comentario</p>
-                                        </div>
-                                    </div>
-                                    <div th:unless="${tmpCommentary.id  ==  userLog.id}" class="d-flex flex-row-reverse align-items-center">
-                                        <div class="flex-shrink-0" style="margin-left: 5px;">
-                                            <img class="imgRedonda"
-                                                 src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
-                                                 alt="...">
-                                        </div>
-                                        <div class="flex-grow-1 text-end ms-3">
-                                            <h5 class="mt-3"  th:text="${tmpCommentary.autor}">Nombre:</h5>
-                                            <p style="margin-top: -7px;" th:text="${tmpCommentary.content}">Comentario Comentario Comentario Comentario</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="d-flex align-items-center  mt-5">
-                                    <div class="flex-shrink-0">
-                                        <img class="imgRedonda"
-                                             src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
-                                             alt="...">
-                                    </div>
-                                    <div class="flex-grow-1 ms-3">
-                                        <form th:object="${commentary}" th:action="@{/request/commentary/save/{i} (i = ${request.id})}"
-                                              method="POST">
-                                            <div style="height: 200px" >
-                                                <div class="col-12">
-                                                    <div class="row">
-                                                        <div class="col-11" tyle="height: 200px">
-                                                            <input style="height: 150px;" type="text" th:field="*{content}" class="form-control"
-                                                                   placeholder="Escribe un comentario" maxlength="255"  required>
-                                                        </div>
-                                                        <div class="col-1">
-                                                            <button type="submit" class="btn btn-primary">
-                                                                <ion-icon name="send" class="mt-2 ml-1"></ion-icon>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
+                            <div class="col-md-3 col-6">
+                                <img src="https://ca-times.brightspotcdn.com/dims4/default/8133d88/2147483647/strip/true/crop/5695x3789+0+0/resize/1200x798!/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ff1%2F8e%2F0909b9b5a11d0eada3ea32b43bb6%2F237c505daf3e49faab155d607435f835"
+                                     class="imgIncidence" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 mt-4">
+                        <div class="row">
+                            <div class="col-6" style="padding: 5px">
+
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0">
                                         <img class="imgRedonda"
                                              src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
                                              alt="...">
                                     </div>
-                                    <div class="flex-grow-1 ms-3">
-                                        <h5 style="font-size: 15px;" class="mt-3" th:text="${request.president.user.name}">Nombre del presidente</h5>
-                                        <p style="margin-top: -7px;" th:text="${request.president.committee.name}">Colonia</p>
+                                    <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                                        <h5 th:text="${tmpRequest.president.user.name}" class="mt-3"></h5>
+                                        <p th:text="${tmpRequest.president.committee.name}" style="margin-top: -7px;"></p>
                                     </div>
                                 </div>
-                                <p >Fecha y hora:</p>
-                                <p th:text="${request.startDate}"></p>
-                                <form class="input-group" th:object="${request}" th:action="@{/request/save/savepaymentStatus}"
-                                      method="POST" >
-                                    <input type="number" class="form-control" th:field="${request.id}" th:value="${request.id}"
-                                           aria-label="Recipient's username" aria-describedby="button-addon2" hidden>
-                                    <select class="form-select" id="inputGroupSelect04"
-                                            aria-label="Example select with button addon" block th:switch="${request.status}" th:field="*{paymentStatus}" >
-                                        <div th:case="1">
-                                            <option value="1" selected>Activo</option>
-                                            <option value="2">Inactivo</option>
-                                            <option value="3">desente</option>
-                                        </div>
-                                        <div th:case="2">
-                                            <option value="1">Activo</option>
-                                            <option value="2" selected>Inactivo</option>
-                                            <option value="3">desente</option>
-                                        </div>
-                                        <div th:case="3">
-                                            <option value="1">Activo</option>
-                                            <option value="2">Inactivo</option>
-                                            <option value="3" selected>desente</option>
-                                        </div>
-
-                                    </select>
-                                    <button class="btn btn-main" type="submit">Button</button>
-                                </form>
-
-                                <p class="text-break mt-3 mb-5" th:utext="${request.description}">
+                                <span>Fecha y hora: <span th:text="${tmpRequest.startDate}"> </span></span>
+                                <br>
+                                <span>Estatus:</span>
+                                <span class="badge bg-success" th:if="${tmpRequest.status == 1}">Activo</span>
+                                <span class="badge bg-danger" th:if="${tmpRequest.status == 2}">Rechazado</span>
+                            </div>
+                            <div class="col-6">
+                                <p class="text-break" th:utext="${tmpRequest.description}">
                                 </p>
-                                <h5><span class="badge archivo"><i class="fa-solid fa-file-pdf"></i>
-                                            Archivo.pdf</span></h5>
-                                <div class="input-group mt-3">
-                                    <form th:object="${request}" th:action="@{/request/save/paymentAmount}"
-                                          method="POST" class="input-group mt-3"><input type="number" class="form-control" th:field="${request.id}" th:value="${request.id}"
-                                                                                        aria-label="Recipient's username" aria-describedby="button-addon2" hidden>
-                                        <input type="number" class="form-control" th:field="*{paymentAmount}" th:value="${request.paymentAmount}"
-                                               aria-label="Recipient's username" aria-describedby="button-addon2">
-                                        <button class="btn btn-main" type="submit"
-                                                id="button-addon2">Guardar</button>
-                                    </form>
-
-                                </div>
-                                <div class="mb-3" th:switch="${request.paymentStatus}">
-                                    <div th:case="'1'">
-                                        <span class="badge badge-pill badge-danger">Por Cobrar</span>
-                                    </div>
-                                    <div th:case="'2'">
-                                        <span class="badge badge-pill badge-primary">Pago Realizado</span>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
