--- a/src/main/resources/templates/city/list.html
+++ b/src/main/resources/templates/city/list.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Municipios</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
   <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
+  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <!-- <link rel="stylesheet" th:href="@{/css/datatables.min.css}" /> -->
   <link rel="stylesheet" href="//cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
