Actualizacion de datos
Actualizacion de datos

--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -7,7 +7,7 @@
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">SIGEV</a>
                 </li>
             </ul>
             <a class="d-flex navbar-brand" href="#">
