--- a/src/main/resources/templates/requests/detailsRequests.html
+++ b/src/main/resources/templates/requests/detailsRequests.html
@@ -134,17 +134,17 @@
                                     <select sec:authorize="hasAnyAuthority('ROL_ENLACE')" class="form-select" id="inputGroupSelect04"
                                             aria-label="Example select with button addon" block th:switch="${request.status}" th:field="*{paymentStatus}" >
                                         <div th:case="1">
-                                            <option value="1" selected>Activo</option>
-                                            <option value="2">Inactivo</option>
-                                            <option value="3">desente</option>
+                                            <option value="1" selected>Inactivo</option>
+                                            <option value="2">Activo</option>
+                                            <option value="3">Terminado</option>
                                         </div>
                                         <div th:case="2">
-                                            <option value="1">Activo</option>
-                                            <option value="2" selected>Inactivo</option>
+                                            <option value="1">Inactivo</option>
+                                            <option value="2" selected>Activo</option>
                                             <option value="3">desente</option>
                                         </div>
                                         <div th:case="3">
-                                            <option value="1">Activo</option>
+                                            <option value="1">Inactivo</option>
                                             <option value="2">Inactivo</option>
                                             <option value="3" selected>desente</option>
                                         </div>
@@ -155,8 +155,6 @@
 
                                 <p class="text-break mt-3 mb-5" th:utext="${request.description}">
                                 </p>
-                                <h5><span class="badge archivo"><i class="fa-solid fa-file-pdf"></i>
-                                            Archivo.pdf</span></h5>
                                 <div class="input-group mt-3" >
                                     <form th:object="${request}" th:action="@{/request/save/paymentAmount}"
                                           method="POST" class="input-group mt-3"><input type="number" class="form-control" th:field="${request.id}" th:value="${request.id}"
@@ -165,8 +163,8 @@
                                                aria-label="Recipient's username" aria-describedby="button-addon2">
                                         <button class="btn btn-main" type="submit"
                                                 id="button-addon2" sec:authorize="hasAnyAuthority('ROL_ENLACE')">Guardar</button>
-                                        <a class="btn btn-main"
-                                                id="button-addon" sec:authorize="hasAnyAuthority('ROL_PRESIDENTE')">Pagar</a>
+                                        <!--   <a class="btn btn-main"
+                                                id="button-addon" sec:authorize="hasAnyAuthority('ROL_PRESIDENTE')">Pagar</a>-->
                                     </form>
 
                                 </div>
