--- a/src/main/resources/templates/administrador/dashboard.html
+++ b/src/main/resources/templates/administrador/dashboard.html
@@ -148,6 +148,19 @@
     </div>
   </div>
 
+
+  <script>
+    var btnSide = document.querySelector("#btnSide");
+    var sideBar = document.querySelector("#sidebar-container");
+
+    btnSide.addEventListener("click", function () {
+      if (sideBar.classList.contains("sidebar-inactivate")) {
+        sideBar.classList.remove("sidebar-inactivate");
+      } else {
+        sideBar.classList.add("sidebar-inactivate");
+      }
+    });
+  </script>
     <script th:src="@{/js/toast.min.js}"></script>
 
     <script th:if="${msg_success != null}">
