--- a/src/main/resources/templates/administrador/tema.html
+++ b/src/main/resources/templates/administrador/tema.html
@@ -62,6 +62,12 @@
                                     <div class="container">
                                         <form th:action="@{/tema/update/color}" method="POST" th:object="${color}">
                                             <div class="d-flex justify-content-around mb-3">
+                                                <label class="form-label">Color Principal </label>
+                                                <label class="form-label">Color Secundario</label>
+                                                <label class="form-label">Color texto </label>
+                                                <label class="form-label">Color Titulos </label>
+                                            </div>
+                                            <div class="d-flex justify-content-aroun.d mb-3">
                                                 <input th:field="*{colorMain}" type="color" pattern="^#[0-9a-fA-F]{6}$" class="form-control form-control-color"
                                                        id="exampleColorInput" th:value="${color.colorMain}" title="Choose your color">
                                                 <input th:field="*{colorSecundary}" type="color" pattern="^#[0-9a-fA-F]{6}$" class="form-control form-control-color"
