--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark mb-4" th:fragment="header" style="background-color: #4682B4;">
   <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/}">COMVE</a>
+    <a class="navbar-brand" th:href="@{/}">SIGEV</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
