--- a/src/main/resources/templates/administrador/create.html
+++ b/src/main/resources/templates/administrador/create.html
@@ -45,20 +45,20 @@
                                 <div class="row">
                                     <div class="col-4">
                                         <label class="form-label">Nombre(s) <span class="text-danger">*</span></label>
-                                        <input id="name" class="form-control" type="text" minlength="2" maxlength="150"
-                                               placeholder="Nombre(s)" th:field="*{name}" onchange="checkInputs()" required>
+                                        <input id="name" class="form-control" type="text"
+                                               placeholder="Nombre(s)" th:field="*{name}" onchange="checkInputs()" >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
                                     </div>
                                     <div class="col-4">
                                         <label class="form-label">Primer Apellido <span class="text-danger">*</span></label>
                                         <input id="lastname" class="form-control" type="text" minlength="2" maxlength="150"
                                                placeholder="Primer Apellido" th:field="*{lastname}" onchange="checkInputs()"
-                                               required>
+                                               >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></small>
                                     </div>
                                     <div class="col-4">
                                         <label class="form-label">Segundo Apellido</label>
-                                        <input id="surname" class="form-control" type="text" minlength="2" maxlength="150"
+                                        <input id="surname" class="form-control" type="text"
                                                placeholder="Segundo Apellido" th:field="*{surname}" onchange="checkInputs()">
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></small>
                                     </div>
@@ -66,7 +66,7 @@
                                         <label class="form-label">Correo electrónico <span class="text-danger">*</span></label>
                                         <input id="email" class="form-control" type="email"
                                                placeholder="Correo@Electronico.com" th:field="*{email}" onchange="checkInputs()"
-                                               required>
+                                               >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
                                     </div>
                                     <div class="col-4 mt-3">
@@ -76,27 +76,27 @@
                                     </div>
                                     <div class="col-6 mt-3">
                                         <label class="form-label">Nombre de Usuario <span class="text-danger">*</span></label>
-                                        <input id="username" class="form-control" type="email" minlength="2" maxlength="150"
+                                        <input id="username" class="form-control" type="email"
                                                placeholder="Nombre de Usuario" th:field="*{username}" onchange="checkInputs()"
-                                               required>
+                                               >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></small>
                                     </div>
                                     <div class="col-6 mt-3">
                                         <label class="form-label">Teléfono <span class="text-danger">*</span></label>
-                                        <input id="phone" class="form-control" type="text" minlength="10" maxlength="10"
-                                               placeholder="Teléfono" th:field="*{phone}" onchange="checkInputs()" required>
+                                        <input id="phone" class="form-control" type="text"
+                                               placeholder="Teléfono" th:field="*{phone}" onchange="checkInputs()" >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
                                     </div>
                                     <div class="col-6 mt-3 mb-3">
                                         <label class="form-label">Contraseña <span class="text-danger">*</span></label>
-                                        <input id="pass1" class="form-control" type="password" minlength="5" maxlength="255"
-                                               placeholder="*****" th:field="*{password}" onchange="checkInputs()" required>
+                                        <input id="pass1" class="form-control" type="password"
+                                               placeholder="*****" th:field="*{password}" onchange="checkInputs()" >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
                                     </div>
                                     <div class="col-6 mt-3 mb-3">
                                         <label class="form-label">Confirmar Contraseña <span class="text-danger">*</span></label>
                                         <input id="confirmarContraseña" name="confirmarContraseña" class="form-control" type="password" minlength="5" maxlength="255"
-                                               placeholder="*****"  onchange="checkInputs()" required>
+                                               placeholder="*****"  onchange="checkInputs()" >
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></small>
                                     </div>
                                 </div>
