--- a/src/main/resources/templates/committee/listAllCommittees.html
+++ b/src/main/resources/templates/committee/listAllCommittees.html
@@ -1,109 +1,150 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comités</title>
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    />
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous"
-    />
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.css" rel="stylesheet" />
     <style>
-        li {
-            text-decoration: none;
+        :root {
+            --main: [[${color.colorMain}]];
+            --secondary: [[${color.colorSecundary}]];
+            --textMain: [[${color.colorText}]];
+            --textSecondary: [[${color.colorTitle}]];
         }
     </style>
+
 </head>
+
 <body>
-    <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container">
-    <div class="card">
-        <div class="card-header">LISTADO DE COMITÉS</div>
-        <div class="card-body">
-            <div
-                    class="col d-flex justify-content-between bg-white border-bottom mb-2">
-                <h5 class="card-title">COMITÉS</h5>
-                <div class="text-end">
-                    <a th:href="@{/committee/create}" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#createCity">
-                        <ion-icon name="pencil"></ion-icon>&nbsp;<span class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVO COMITÉ</span>
+
+<div class="d-flex">
+    <div th:insert="~{fragments/sideBar :: sideBar}"></div>
+
+    <div class="w-100">
+        <div th:insert="~{fragments/navBar :: navBar}"></div>
+
+        <!-- contenido de pagina -->
+        <div id="content">
+            <div class="container d-flex align-items-center ">
+                <h1>Comités</h1>
+                <button  class="btn btn-add ms-auto ">
+
+
+                    <a th:href="@{/committee/create}">
+                        Registrar <i class="fa-solid fa-plus "></i>
                     </a>
-                </div>
+
+
+
+                </i></button>
             </div>
-            <div class="row">
-                <div class="col-lg-12 mx-auto table-responsive">
-                    <table class="table table-hover table-collapse mt-3 mytable"
-                           id="states">
-                        <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Nombre</th>
-                            <th>Estatus</th>
-                            <th>Estado</th>
-                            <th>Municipio</th>
-                            <th>Suburbio</th>
-                            <th style="text-align: center">Acciones</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="committee, iter: ${listCommittees}">
-                            <td th:text="${iter.index+1}"></td>
-                            <td th:text="${committee.name}"></td>
-                            <td  th:switch="${committee.status}">
+            <div class="container">
 
-                                <div th:case="'1'">
-                                    <small class="text-muted"><span
-                                            class="badge badge-pill badge-success">Activo</span></small>
-                                </div>
-                                <div th:case="'0'">
-                                    <small class="text-muted"><span
-                                            class="badge badge-pill badge-danger">Inactivo</span></small>
-                                </div></td>
-                            <td>[[${committee.suburb.city.state.name}]]</td>
-                            <td>[[${committee.suburb.city.name}]]</td>
-                            <td th:text="${committee.suburb.name.length}" class="text-truncate"></td>
-                            <td class="text-end">
-                                <div  class="col-lg-12 mb-3 float-right" >
-                                    <a   class="btn btn-primary" th:href="@{/committee/update/{id} (id=${committee.id})}">
-                                        <ion-icon name="create-outline"></ion-icon><span
-                                            class="d-sm-none d-md-none d-lg-inline d-xl-inline">Actualizar</span>
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <nav th:if="${listCommittees.totalPages > 0}" aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                            <li class="page-item" th:classappend="${listCommittees.number == 0 ? 'disabled' : ''}">
-                                <a th:href="@{/committee/list(page=${listCommittees.number - 1})}" class="page-link">Anterior</a>
-                            </li>
+                <hr size="5px">
+                <div class="container">
+                                        <table class="table table-hover table-collapse mt-3 mytable"
+                                               id="states">
+                                            <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Nombre</th>
+                                                <th>Estatus</th>
+                                                <th>Suburbio</th>
+                                                <th style="text-align: center">Acciones</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr th:each="committee, iter: ${listCommittees}">
+                                                <td th:text="${iter.index+1}"></td>
+                                                <td th:text="${committee.name}"></td>
+                                                <td>
+                                                    <span th:text="${committee.status == '1'} ? 'Inactivo' : 'Activo'"> >
 
-                            <li class="page-item" th:classappend="${i eq listCommittees.number + 1} ? 'active'"
-                                th:each="i : ${#numbers.sequence( 1, listCommittees.totalPages, 1)}">
-                                <a class="page-link" th:href="@{/committee/list?page={tmpPag} (tmpPag=${i-1}) }" th:text="${i}"
-                                   th:title="${'Page '+ i}" data-toggle="tooltip"></a>
-                            </li>
-                            <li class="page-item"
-                                th:classappend="${listCommittees.number == (listCommittees.totalPages - 1) ? 'disabled' : ''}">
-                                <a th:href="@{/committee/list(page=${listCommittees.number + 1})}" class="page-link">Siguiente</a>
-                            </li>
-                        </ul>
-                    </nav>
+                                                    </span>
+                                                </td>
+                                                <td th:text="${committee.suburb.name}" class="text-truncate"></td>
+                                                <td class="text-end">
+                                                    <div  class="col-lg-12 mb-3 float-right" >
+                                                        <a   class="btn btn-primary" th:href="@{/committee/update/{id} (id=${committee.id})}">
+                                                            <ion-icon name="create-outline"></ion-icon><span
+                                                                class="d-sm-none d-md-none d-lg-inline d-xl-inline">Actualizar</span>
+                                                        </a>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                        <nav th:if="${listCommittees.totalPages > 0}" aria-label="Page navigation example">
+                                            <ul class="pagination justify-content-center">
+                                                <li class="page-item" th:classappend="${listCommittees.number == 0 ? 'disabled' : ''}">
+                                                    <a th:href="@{/committee/list(page=${listCommittees.number - 1})}" class="page-link">Anterior</a>
+                                                </li>
+
+                                                <li class="page-item" th:classappend="${i eq listCommittees.number + 1} ? 'active'"
+                                                    th:each="i : ${#numbers.sequence( 1, listCommittees.totalPages, 1)}">
+                                                    <a class="page-link" th:href="@{/committee/list?page={tmpPag} (tmpPag=${i-1}) }" th:text="${i}"
+                                                       th:title="${'Page '+ i}" data-toggle="tooltip"></a>
+                                                </li>
+                                                <li class="page-item"
+                                                    th:classappend="${listCommittees.number == (listCommittees.totalPages - 1) ? 'disabled' : ''}">
+                                                    <a th:href="@{/committee/list(page=${listCommittees.number + 1})}" class="page-link">Siguiente</a>
+                                                </li>
+                                            </ul>
+                                        </nav>
                 </div>
             </div>
         </div>
-        <div class="card-footer"></div>
+
     </div>
+
 </div>
+
+
+
+
+<script th:src="@{/js/nav.js}"></script>
+<scrip th:src="@{/js/bootstrap.bundle.min.js}"></scrip>
+<script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#states').DataTable();
+    });
+
+    var tableData = $('#comitesTable').DataTable({
+        ordering: false,
+        language: {
+            processing: "",
+            search: "Buscar:",
+            lengthMenu: "Mostrar _MENU_ registros",
+            info: "Mostrando _START_ a _END_ de _TOTAL_ registros",
+            infoEmpty: "No hay registros para mostrar",
+            infoFiltered: "(filtrado de _MAX_ entradas totales)",
+            infoPostFix: "",
+            loadingRecords: "Cargando...",
+            zeroRecords: "No se encontraron registros coincidentes",
+            emptyTable: "Aucune donnée disponible dans le tableau",
+            paginate: {
+                first: "Primero",
+                previous: "Anterior",
+                next: "Siguiente",
+                last: "Último"
+            }
+        }
+    });
+</script>
 <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
 <!--Ionicons-->
 <script
@@ -130,4 +171,5 @@
     });
 </script>
 </body>
+
 </html>
