--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -12,7 +12,7 @@ body{
     background-image: url("../img/Fongo.jpg");
 }
 .encabezado{
-    background-color: #73286B;
+    background-color:var(--secondary);
     width: 100%;
     height: 100px;
 }
@@ -60,7 +60,7 @@ form img{
 }
 .button{
     margin-top: 50px;
-    background: #632878;
+    background: var(--secondary);
     color: white;
     width: 100px;
 }
@@ -103,7 +103,7 @@ form img{
     }
     .button{
         margin-top: 50px;
-        background: #632878;
+        background: var(--secondary);
         color: white;
         margin-left: 155px;
         width: 150px;
