--- a/src/main/resources/templates/fragments/sideBar.html
+++ b/src/main/resources/templates/fragments/sideBar.html
@@ -26,7 +26,7 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Blank_map_of_Morelos.svg/1280px-Blank_map_of_Morelos.svg.png"
                 width="30" height="23">Colonias</a>
         <a th:href="@{/request/list}" sec:authorize="hasAnyAuthority('ROL_ENLACE')" class="d-block  p-3"><i class="fa-solid fa-screwdriver-wrench"></i> Incidencias</a>
-        <a th:href="@{/committee/list}" sec:authorize="hasAnyAuthority('ROL_ENLACE')" class="d-block  p-3"><i class="fa-solid fa-users"></i> Comités</a>
+        <a th:href="@{/committee/listar}" sec:authorize="hasAnyAuthority('ROL_ENLACE')" class="d-block  p-3"><i class="fa-solid fa-users"></i> Comités</a>
         <!--PRESIDENTE-->
         <a th:href="@{/president/list}" sec:authorize="hasAnyAuthority('ROL_PRESIDENTE')" class="d-block  p-3"><i class="fa-solid fa-screwdriver-wrench"></i> Incidencias</a>
 
